--- a/main.css
+++ b/main.css
@@ -1,25 +1,20 @@
-* {
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
+.container {
+    width: 100%;
+    height: 100%;
 }
 
-html, body {
-    font-size: 1rem;
-    margin: 0.25rem auto;
-    font-family: 'Fira Sans', sans-serif;
-}
-
-h1 {
+h4 {
     text-align: center;
-    font-size: 1.5rem;
-    font-weight: 400;
-    margin-top: 1rem;
 }
 
-strong {
-    color:hsla(0,100%,50%, .8);
+p {
+    text-align: center;
 }
 
-
-
+img {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 50%;
+    
+}
